2022-08-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated the news.

2022-08-10    Fojtik Jaroslav  <JaFojtik@yandex.com>

        * VisualMagick/configure/stdafx.h Added define WIN32_LEAN_AND_MEAN
        * VisualMagick/configure/configure.exe New rebuild.

2022-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * fuzzing/oss-fuzz-build.sh (MAGICK_LIBS): Add libsharpyuv.a to
        the list of libraries to check for.

2022-08-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * configure.ac: When checking for libwmf, add a test for
        libsharpyuv.  Not yet tested but maybe it will work.

2022-08-07    Fojtik Jaroslav  <JaFojtik@yandex.com>

        * VisualMagick\configure\configure.cpp: The /MACHINE:x86
        should never be placed to DLL dependency list.

2022-08-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/tga.c: Enhance 'coder' level trace information.
        Normalize on 'unsigned int' as much as possible in order to use
        natural types and likely help with function inligning.

2022-08-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/tga.c (ReadTGAImage): Remove a defective validation of
        comment length, which blocked reading some sample TGA files from
        the "Encyclopedia Of Graphics File Formats" book.

2022-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/heif.c: If module is compiled, but HasHEIF is not
        defined, then RegisterHEIFImage/UnregisterHEIFImage
        implementations are empty.

        * coders/jxl.c: If module is compiled, but HasJXL is not defined,
        then RegisterJXLImage/UnregisterJXLImage implementations are
        empty.

2022-07-30  Sam James        <sam@gentoo.org>

        * configure.ac: Fix Bashism in maintainer-mode check.

2022-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/miff.c (ImportRLEPixels): Add missing type cast for