@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020220811"
-#define public MagickPackageReleaseDate "snapshot-20220811"
+#define public MagickPackageVersionAddendum ".020220813"
+#define public MagickPackageReleaseDate "snapshot-20220813"
