@@ -494,13 +494,17 @@ extern "C" {
 
   static int SVGIsStandalone(void *context);
 
+#if defined(ENABLE_XML_INTERNAL_SUBSET)
   static int SVGHasInternalSubset(void *context);
+#endif /* ENABLE_XML_INTERNAL_SUBSET */
 
   static int SVGHasExternalSubset(void *context);
 
+#if defined(ENABLE_XML_INTERNAL_SUBSET)
   static void SVGInternalSubset(void *context,const xmlChar *name,
                                 const xmlChar *external_id,
                                 const xmlChar *system_id);
+#endif /* ENABLE_XML_INTERNAL_SUBSET */
 
   static xmlParserInputPtr SVGResolveEntity(void *context,
                                             const xmlChar *public_id,
@@ -587,6 +591,7 @@ SVGIsStandalone(void *context)
   return(svg_info->document->standalone == 1);
 }
 
+#if defined(ENABLE_XML_INTERNAL_SUBSET) && ENABLE_XML_INTERNAL_SUBSET
 static int
 SVGHasInternalSubset(void *context)
 {
@@ -601,6 +606,7 @@ SVGHasInternalSubset(void *context)
   svg_info=(SVGInfo *) context;
   return(svg_info->document->intSubset != NULL);
 }
+#endif /* ENABLE_XML_INTERNAL_SUBSET */
 
 static int
 SVGHasExternalSubset(void *context)
@@ -617,6 +623,8 @@ SVGHasExternalSubset(void *context)
   return(svg_info->document->extSubset != NULL);
 }
 
+#if defined(ENABLE_XML_INTERNAL_SUBSET) && ENABLE_XML_INTERNAL_SUBSET
+/* FIXME: Parser context allocation/handling is apparently wrong for internal subset */
 static void
 SVGInternalSubset(void *context,const xmlChar *name,
                   const xmlChar *external_id,const xmlChar *system_id)
@@ -634,6 +642,7 @@ SVGInternalSubset(void *context,const xmlChar *name,
   svg_info=(SVGInfo *) context;
   (void) xmlCreateIntSubset(svg_info->document,name,external_id,system_id);
 }
+#endif /* ENABLE_XML_INTERNAL_SUBSET */
 
 static xmlParserInputPtr
 SVGResolveEntity(void *context,
@@ -4077,9 +4086,13 @@ ReadSVGImage(const ImageInfo *image_info,ExceptionInfo *exception)
   (void) xmlSubstituteEntitiesDefault(0);
 
   (void) memset(&SAXModules,0,sizeof(SAXModules));
+#if defined(ENABLE_XML_INTERNAL_SUBSET) && ENABLE_XML_INTERNAL_SUBSET
   SAXModules.internalSubset=SVGInternalSubset;
+#endif /* ENABLE_XML_INTERNAL_SUBSET */
   SAXModules.isStandalone=SVGIsStandalone;
+#if defined(ENABLE_XML_INTERNAL_SUBSET) && ENABLE_XML_INTERNAL_SUBSET
   SAXModules.hasInternalSubset=SVGHasInternalSubset;
+#endif /* ENABLE_XML_INTERNAL_SUBSET */
   SAXModules.hasExternalSubset=SVGHasExternalSubset;
   SAXModules.resolveEntity=SVGResolveEntity;
   SAXModules.getEntity=SVGGetEntity;
@@ -4110,28 +4123,32 @@ ReadSVGImage(const ImageInfo *image_info,ExceptionInfo *exception)
                                           image->filename);
   if (svg_info.parser == (xmlParserCtxtPtr) NULL)
     {
-      /* FIXME: Handle failure! */
+      ThrowException(exception,DrawError,UnableToDrawOnImage,
+                     "Failed to push XML parser context");
     }
-  while ((n=ReadBlob(image,MaxTextExtent-1,message)) != 0)
+  if (svg_info.parser != (xmlParserCtxtPtr) NULL)
     {
-      message[n]='\0';
-      status=xmlParseChunk(svg_info.parser,message,(int) n,False);
-      if (status != 0)
-        break;
+      while ((n=ReadBlob(image,MaxTextExtent-1,message)) != 0)
+        {
+          message[n]='\0';
+          status=xmlParseChunk(svg_info.parser,message,(int) n,False);
+          if (status != 0)
+            break;
+        }
+      (void) xmlParseChunk(svg_info.parser,message,0,True);
+      /*
+        Assure that our private context is freed, even if we abort before
+        seeing the document end.
+      */
+      SVGEndDocument(&svg_info);
+      if (svg_info.parser->myDoc != (xmlDocPtr) NULL)
+        xmlFreeDoc(svg_info.parser->myDoc);
+      /*
+        Free all the memory used by a parser context. However the parsed
+        document in ctxt->myDoc is not freed (so we just did that).
+      */
+      xmlFreeParserCtxt(svg_info.parser);
     }
-  (void) xmlParseChunk(svg_info.parser,message,0,True);
-  /*
-    Assure that our private context is freed, even if we abort before
-    seeing the document end.
-  */
-  SVGEndDocument(&svg_info);
-  if (svg_info.parser->myDoc != (xmlDocPtr) NULL)
-    xmlFreeDoc(svg_info.parser->myDoc);
-  /*
-    Free all the memory used by a parser context. However the parsed
-    document in ctxt->myDoc is not freed (so we just did that).
-  */
-  xmlFreeParserCtxt(svg_info.parser);
   (void) LogMagickEvent(CoderEvent,GetMagickModule(),"end SAX");
   (void) fclose(file);
   CloseBlob(image);
