@@ -35,6 +35,18 @@
 <div class="document">
 
 
+<p>2022-08-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/svg.c (ReadSVGImage): Address concern from SourceForge
+issue #669 &quot;Segmentation fault caused by null pointer dereference
+by checking return from xmlCreatePushParserCtxt().  Address
+oss-fuzz 48340 &quot;graphicsmagick:coder_SVG_fuzzer:
+Heap-use-after-free in xmlParseInternalSubset&quot; by disabling
+internal subset handling until the parser context handling is
+fixed.</li>
+</ul>
+</blockquote>
 <p>2022-08-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
